<resources>
    <string name="app_name">SugarCoach</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Ingresar</string>
    <string name="boarding_title">Comienza disfrutar de</string>
    <string name="boarding_subtitle">SugarCoach!</string>
    <string name="register_label">Crear cuenta</string>
    <string name="empty_email_error_message">El mail no puede estar vacio</string>
    <string name="empty_codigo_error_message">El codigo no puede estar vacio o no puede ser menor a 6 digitos</string>
    <string name="invalid_email_error_message">Por favor ingrese un mail valido</string>
    <string name="invalid_phone_error_message">Por favor ingrese un numero de telefono valido</string>
    <string name="empty_password_error_message">La contraseña no puede estar vacia</string>
    <string name="empty_username_error_message">El user no puede estar vacio</string>
    <string name="login_failure">Intente nuevamente</string>
    <string name="update_success">Actualizado exitosamente</string>
    <string name="qr_success">Codigo escaneado exitosamente</string>
    <string name="delete_success">Eliminado exitosamente</string>
    <string name="sign_failure">Intente nuevamente</string>
    <string name="main_min_txt">Min</string>
    <string name="main_max_txt">Max</string>
    <string name="main_prom_txt">Prom</string>
    <string name="main_prox_med_txt">Proxima medición</string>
    <string name="main_register_txt">Carga</string>
    <string name="main_daily_register_txt">Registro Diario</string>
    <string name="main_profile_txt">Perfil</string>
    <string name="main_treatment_txt">Tratamiento</string>
    <string name="main_statistics_txt">Estadisticas</string>
    <string name="main_config_txt">Configuración</string>
    <string name="main_glucemia_txt">Glucemia</string>
    <string name="register_prev_txt">Anterior</string>
    <string name="register_next_txt">Siguiente</string>
    <string name="register_again_txt">Deshacer</string>
    <string name="register_completed_txt">Terminé</string>
    <string name="register_pts_txt">Puntos</string>
    <string name="register_min_txt">Min</string>
    <string name="register_max_txt">Max</string>
    <string name="register_new_register_txt">nueva carga</string>
    <string name="register_new_activity_txt">Seleccione una actividad</string>
    <string name="register_new_state_txt">Seleccione un estado de ánimo</string>
    <string name="treatment_glu_prom_txt">Glucosa Promedio</string>
    <string name="treatment_insu_txt">Insulina</string>
    <string name="treatment_schedules_txt">Horarios</string>
    <string name="treatment_select_txt">Seleccionar</string>
    <string name="treatment_unit_txt">Unidad</string>
    <string name="treatment_hora_txt">Hora</string>
    <string name="treatment_obj_txt">Objetivo glucémico</string>
    <string name="treatment_hipo_txt">Hipoglucemia</string>
    <string name="treatment_sincronizar_medidor_txt">¿Quieres programar recordatorio?</string>
    <string name="treatment_medidor_txt">¿Cuál es la Marca de tu Medidor de Glucemia?</string>
    <string name="treatment_sincronizar_txt">Sincronizar</string>
    <string name="treatment_bomba_infusora_txt">¿Cuál es la Marca de tu Bomba Infusora de Insulina?</string>
    <string name="treatment_hiper_txt">Hiperglucemia</string>
    <string name="treatment_bomb_txt">¿Usa bomba?</string>
    <string name="treatment_correcion_sensibilidad_txt">Cada</string>
    <string name="treatment_insu_basal_label">¿Cuántas veces por dia te colocas la insulina basal y cuantas unidades cada vez?</string>
    <string name="treatment_insu_correctora_label">¿Cuántas veces por dia te mides la glucemia?</string>
    <string name="treatment_insu_hora_label">Insulina Basal por Hora</string>
    <string name="treatment_insu_basal_txt">¿Cual Insulina Basal?</string>
    <string name="treatment_valores_txt">Define tus rangos de:</string>
    <string name="treatment_insu_correctora_txt">¿Cual Insulina Rápida?</string>
    <string name="treatment_insu_correctora_objectivo_txt">Corrección por Sensibilidad Glucemia Mayor al Objetivo</string>
    <string name="treatment_correctora_carbono_txt">Corrección por Hidratos de Carbono - Bolo</string>
    <string name="treatment_yes_txt">Si</string>
    <string name="treatment_unit">Un.</string>
    <string name="treatment_grams">mg/dl</string>
    <string name="treatment_gramos">gramos</string>
    <string name="accept_txt">Aceptar</string>
    <string name="treatment_no_txt">no</string>
    <string name="forgot_recuperar_label">Recuperar</string>
    <string name="sign_google_label">Google</string>
    <string name="sign_email_label">Email</string>
    <string name="sign_facebook_label">Facebook</string>
    <string name="sign_twitter_label">Twitter</string>
    <string name="sign_label">O crea tu cuenta con</string>
    <string name="sign_no_account_label">No tenes cuenta? <b>Crea una</b></string>
    <string name="sign_bt_label">Registrarse</string>
    <string name="login_complete_label">Completa tus datos</string>
    <string name="login_forgot_label">¿Olvidaste tu contraseña? </string>
    <string name="login_sign_qr_label">Soy Padre entrar con Código QR</string>
    <string name="login_sign_medico_qr_label">Soy Medico entrar con Código QR</string>
    <string name="login_user_label">Apodo</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_email_label">Mail</string>
    <string name="facebook_app_id">544348083039193</string>
    <string name="fb_login_protocol_scheme">fb544348083039193</string>
    <string name="google_id">491509079769-id35b8mg2ri28f22hokp9fbnhbpg9e3c.apps.googleusercontent.com</string>
    <string name="test">Lorem Lipsum</string>
    <string name="loading_label">Cargando…</string>
    <string name="empty_register_range_error_message">Debe ingresar un valor dentro del rango</string>
    <string name="empty_register_error_message">Debe ingresar un valor</string>
    <string name="register_breakfast_label">Desayuno</string>
    <string name="register_pbreakfast_label">Post Desayuno</string>
    <string name="register_lunch_label">Almuerzo</string>
    <string name="register_plunch_label">Post Almuerzo</string>
    <string name="register_snack_label">Merienda</string>
    <string name="register_psnack_label">Post Merienda</string>
    <string name="register_dinner_label">Cena</string>
    <string name="register_pdinner_label">Post Cena</string>
    <string name="congratulation_label">Bravo!</string>
    <string name="dialog_category_label">Selecciona un tipo de medición</string>
    <string name="register_date_warning">Atención usted está por cambiar la fecha</string>
    <string name="register_time_warning">Atención usted está por cambiar la hora</string>
    <string name="register_time_future">Atención usted no puede poner una fecha futura</string>
    <string name="time_future_warning">Para poder continuar el horario tiene que ser antiguo, no podes cargar una hora futura! </string>
    <string name="validate_hour">Atención no puede poner una hora futura!</string>
    <string name="register_category_warning">Atención usted está por cambiar la categoría</string>
    <string name="congratulation_pts_label">Total pts</string>
    <string name="congratulation_nivel_label">Nivel</string>
    <string name="register_exercises_label">Actividad</string>
    <string name="register_emotional_label">Estado de ánimo</string>
    <string name="register_insulina_label">Insulina Rápida</string>
    <string name="register_valor_label">Ingresar valor</string>
    <string name="register_carbohidratos_label">Carbohidratos</string>
    <string name="register_glucemia_label">Glucemia</string>
    <string name="register_glucemia_rango_label">En rango</string>
    <string name="register_glucemia_debajo_label">Debajo de rango</string>
    <string name="register_glucemia_arriba_label">Arriba del rango</string>
    <string name="statistics_exercises_label">Actividad</string>
    <string name="statistics_emotional_label">Estado de ánimo</string>
    <string name="statistics_insulina_label">Insulina</string>
    <string name="statistics_rapida_basal_label">Insulina Basal vs Rápida</string>
    <string name="statistics_insulina_basal_label">Insulina Basal</string>
    <string name="statistics_carbohidratos_label">Carbohidratos</string>
    <string name="statistics_glucemia_label">Glucemia</string>
    <string name="statistics_sd_label">Insulina Rápida(S/D)</string>
    <string name="daily_date_label">#%1$s #%2$s</string>
    <string name="daily_hc_label">Gramos Carbohidratos</string>
    <string name="daily_glu_label">Glucemia mg/dl</string>
    <string name="daily_correcto_label">Un. Insulina Rápida</string>
    <string name="daily_basal_label"> Un. de Insulina Basal</string>
    <string name="register_basal_unidad_label">Unidades</string>
    <string name="register_gluc_unidad_label">mg/dl</string>
    <string name="register_car_unidad_label">Gramos</string>
    <string name="dialog_comentary_save">Guardar</string>
    <string name="dialog_comentary_label">Agrega un comentario</string>
    <string name="nota_label">Nota</string>
    <string name="dialog_comentary_hint">Escribe un comentario</string>
    <string name="daily_detail_date">Fecha</string>
    <string name="daily_detail_hora">Hora</string>
    <string name="daily_detail_category">Etiqueta</string>
    <string name="daily_detail_gluc">Glucemia (mg/dl)</string>
    <string name="daily_detail_photo">(miniatura de foto tomada)</string>
    <string name="daily_detail_accept">OK</string>
    <string name="daily_detail_cancel">Cancelar</string>
    <string name="daily_detail_share">Compartir en</string>
    <string name="daily_share">Compartir</string>
    <string name="daily_detail_permission">Estos permisos son necesarios para el funcionamiento de la app</string>
    <string name="profile_data_label">Tus datos</string>
    <string name="profile_birthday_label">Fecha Nac.</string>
    <string name="profile_sex_label">Sexo</string>
    <string name="profile_height_label">Altura</string>
    <string name="profile_name_label">Nombre</string>
    <string name="profile_logout_label">Cerrar Sesión</string>
    <string name="profile_weight_label">Peso</string>
    <string name="profile_debut_label">Fecha de debut</string>
    <string name="profile_avatar_label">Elige un avatar</string>
    <string name="profile_select_gender_label">Seleccione un genero</string>
    <string name="profile_fem_label">Femenino</string>
    <string name="profile_mas_label">Masculino</string>
    <string name="profile_otro_label">Otro</string>
    <string name="profile_no_definir_label">Prefiero no defenir</string>
    <string name="config_account_label">Cuenta Actual</string>
    <string name="config_standard_label">Standard</string>
    <string name="config_premium_label">Premium</string>
    <string name="config_upgrade_label">Upgrade to \nPremium</string>
    <string name="config_sms_label">Activar SMS para \ninformar emergencias </string>
    <string name="config_geolocalizacion_label">Activar geolocalización \npara informar emergencias </string>
    <string name="config_numero_label">Ingresar número de teléfono</string>
    <string name="config_control_label">Habilitar control parental</string>
    <string name="config_medico_label">Habilitar telemedicina</string>
    <string name="config_qr_label">Comparte el Código QR</string>
    <string name="config_preguntas_label"><u>Preguntas frecuentes</u></string>
    <string name="config_premium_dialog">¿Queres actualizar tu cuenta?</string>
    <string name="config_control_dialog">¿Queres activar el control parental?</string>
    <string name="config_medico_dialog">¿Queres activar la telemedicina?</string>
    <string name="treatment_save_dialog">¿Queres guardar los cambios?</string>
</resources>