<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="307dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/profile_select_gender_label"
                    style="@style/TextStyle.Heading"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:textColor="@color/gray_letter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/profile_fem_label"
                    android:id="@+id/profile_fem_tv"
                    style="@style/TextStyle.Heading"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/profile_mas_label"
                    android:id="@+id/profile_mas_tv"
                    style="@style/TextStyle.Heading"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/profile_otro_label"
                    android:id="@+id/profile_otro_tv"
                    style="@style/TextStyle.Heading"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/profile_no_definir_label"
                    android:id="@+id/profile_definir_tv"
                    style="@style/TextStyle.Heading"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>