<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:paddingRight="10dp"
            android:layout_marginRight="16dp"
            android:layout_height="30dp">
        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle.Heading"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/blue"
                android:layout_width="0dp"
                android:textAllCaps="true"

                android:layout_height="match_parent"
                android:text="@string/treatment_schedules_txt"
                android:layout_weight="0.33"/>
        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle.Heading"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/blue"
                android:layout_width="0dp"
                android:textAllCaps="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:text="@string/treatment_select_txt"
                android:layout_weight="0.33"/>
        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle.Heading"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/blue"
                android:layout_width="0dp"
                android:textAllCaps="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:text="@string/treatment_unit_txt"
                android:layout_weight="0.33"/>
    </LinearLayout>
</LinearLayout>