<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <TextView
            android:text="@string/boarding_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="122dp" android:textColor="@color/blueDark" android:textSize="23dp"
            style="@style/TextStyle.Heading" android:gravity="center"/>
    <TextView
            android:text="@string/boarding_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/blueDark"
            android:textSize="46dp"
            style="@style/TextStyle.Heading"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/sign_title"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/sign_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray_letter" android:textSize="17dp"
            style="@style/TextStyle.Heading" android:gravity="center" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_email_fl"/>

    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/sign_email_fl"
            app:layout_constraintBottom_toTopOf="@+id/sign_google_fl">
        <Button
                android:text="@string/sign_email_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:id="@+id/sign_email"
                style="@style/AppTheme.ButtonGoogle"
        />
        <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/envelope"
                app:srcCompat="@drawable/envelope"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" android:elevation="10dp"/>

    </FrameLayout>
    <FrameLayout
              android:layout_width="0dp"
              android:layout_height="46dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="30dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="30dp"
              android:layout_marginBottom="24dp"
              android:id="@+id/sign_google_fl"
              app:layout_constraintBottom_toTopOf="@+id/sign_facebook_fl">
            <Button
                    android:text="@string/sign_google_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17dp"
                    android:id="@+id/sign_google"
                    style="@style/AppTheme.ButtonGoogle"
            />
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_google"
                    app:srcCompat="@drawable/ic_google"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp" android:elevation="10dp"/>

        </FrameLayout>

    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:id="@+id/sign_facebook_fl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="94dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/sign_facebook_label"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textSize="17dp"
                android:id="@+id/sign_facebook"
                style="@style/AppTheme.ButtonFacebook"/>
        <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_facebook"
                app:srcCompat="@drawable/ic_facebook"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" android:elevation="10dp"/>

    </FrameLayout>
    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:id="@+id/sign_twitter_fl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="94dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/sign_twitter_label"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textSize="17dp"
                android:id="@+id/sign_twitter"
                style="@style/AppTheme.ButtonTwitter"/>
        <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_twitter"
                app:srcCompat="@drawable/ic_twitter"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:elevation="10dp"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>