<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/white">

  <ImageView
          android:id="@+id/bg"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:scaleType="centerCrop"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/space_bg" />

  <TextView
          android:text="@string/boarding_title"
          android:layout_width="411dp"
          android:layout_height="wrap_content"
          android:id="@+id/sign_email_title"
          android:textColor="@color/white"
          android:textSize="20dp"
          style="@style/TextStyle.Heading"
          android:gravity="center"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
          app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintBottom_toTopOf="@+id/textView7"
          app:layout_constraintVertical_chainStyle="packed"/>
  <TextView
          android:text="@string/boarding_subtitle"
          android:layout_width="411dp"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:textSize="40dp"
          style="@style/TextStyle.Heading"
          android:gravity="center"
          android:id="@+id/textView7"
          android:visibility="visible"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/sign_email_title" app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintBottom_toTopOf="@+id/sign_email_complete_tv"/>
  <TextView
          android:text="@string/login_complete_label"
          android:layout_width="411dp"
          android:layout_height="wrap_content"
          android:textColor="@color/light_gray"
          android:textSize="17dp"
          android:id="@+id/sign_email_complete_tv"
          style="@style/TextStyle.Heading"
          android:gravity="center"
          android:visibility="visible"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
          app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintBottom_toTopOf="@+id/sign_email_cardview"/>

  <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="10dp"
          app:cardElevation="5dp"
          android:id="@+id/sign_email_cardview"
          app:cardPreventCornerOverlap="true"
          android:layout_height="wrap_content"
          android:visibility="visible"
          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="11dp"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="11dp" android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/sign_email_complete_tv" android:layout_marginBottom="8dp"
          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="18dp"
            android:layout_height="match_parent">
      <TextView
              android:text="@string/login_user_label"
              style="@style/TextStyle.Heading"
              android:textSize="11dp"
              android:textColor="@color/blue"
              android:textAllCaps="true"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="6dp"/>
      <com.google.android.material.card.MaterialCardView
              app:cardElevation="5dp"
              app:cardCornerRadius="10dp"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              app:strokeColor="@color/pink"
              app:cardBackgroundColor="@color/white"
              app:cardForegroundColor="@android:color/transparent"
              app:strokeWidth="1dp">
        <androidx.appcompat.widget.AppCompatEditText
                android:gravity="center_vertical"
                android:background="@color/white"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_margin="4dp"
                android:id="@+id/sign_email_user"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
      </com.google.android.material.card.MaterialCardView>
      <TextView
              android:text="@string/login_email_label"
              style="@style/TextStyle.Heading"
              android:textSize="11dp"
              android:textColor="@color/blue"
              android:textAllCaps="true"
              android:layout_marginTop="15dp"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="6dp"/>
      <com.google.android.material.card.MaterialCardView
              app:cardElevation="5dp"
              app:cardCornerRadius="10dp"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              app:strokeColor="@color/pink"
              app:cardBackgroundColor="@color/white"
              app:cardForegroundColor="@android:color/transparent"
              app:strokeWidth="1dp">
        <androidx.appcompat.widget.AppCompatEditText
                android:gravity="center_vertical"
                android:background="@color/white"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_margin="4dp"
                android:id="@+id/sign_email_mail"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
      </com.google.android.material.card.MaterialCardView>
      <TextView
              android:text="@string/login_password_label"
              style="@style/TextStyle.Heading"
              android:textSize="11dp"
              android:textColor="@color/blue"
              android:textAllCaps="true"
              android:layout_marginTop="15dp"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="6dp"/>
      <com.google.android.material.card.MaterialCardView
              app:cardElevation="5dp"
              app:cardCornerRadius="10dp"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              app:strokeColor="@color/pink"
              app:cardBackgroundColor="@color/white"
              app:cardForegroundColor="@android:color/transparent"
              app:strokeWidth="1dp">
        <androidx.appcompat.widget.AppCompatEditText
                android:gravity="center_vertical"
                android:background="@color/white"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:id="@+id/sign_email_pass"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
      </com.google.android.material.card.MaterialCardView>
      <Button
              android:text="@string/sign_bt_label"
              android:layout_width="200dp"
              android:layout_height="46dp"
              android:layout_gravity="center"
              android:layout_marginTop="35dp"
              android:id="@+id/sign_email_bt"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="30dp"
              android:backgroundTint="@color/pink"
              android:layout_marginStart="30dp"/>

      <TextView
              android:text="@string/sign_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:textColor="@color/blue"
              android:textSize="17dp"
              style="@style/TextStyle.Heading"
              android:gravity="center"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="14dp"/>

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
        <FrameLayout android:layout_width="0dp"
                     android:layout_weight="0.50"
                     android:id="@+id/sign_google"
                     android:layout_height="match_parent">
          <ImageView
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:src="@drawable/ic_google"
                  app:srcCompat="@drawable/ic_google"
                  android:layout_gravity="center"
                  android:layout_marginLeft="15dp"
                  android:elevation="10dp"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dp"
                     android:layout_weight="0.50"
                     android:id="@+id/sign_facebook"
                     android:layout_height="match_parent">
          <ImageView
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:src="@drawable/ic_facebook"
                  app:srcCompat="@drawable/ic_facebook"
                  android:layout_gravity="center"
                  android:layout_marginLeft="15dp"
                  android:elevation="10dp"/>
        </FrameLayout>

      </LinearLayout>

    </LinearLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>